# dice-roller

./: .gitignore  README.md
c/: configure.ac  main.c  makefile
c/src/: Makefile.am  dice.c  dice.h  main.c
c/test/: test_dice.c
clojure/dice-roller/: CHANGELOG.md  README.md  project.clj
clojure/dice-roller/doc/: intro.md
clojure/dice-roller/src/dice_roller/: core.clj
clojure/dice-roller/test/dice_roller/: core_test.clj
crystal/: main  main.cr  shard.yaml
crystal/spec/: dice_spec.cr
crystal/src/: dice.cr  main.cr
d/: main.d
emacs/: roll-dice.el
go/: dice-roller  main.go
go/dice/: dice.go  dice_test.go
haskell/: main.hs
haskell/dice-roller/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
haskell/dice-roller/app/: Main.hs
haskell/dice-roller/src/: Dice.hs
javascript/react/dice-roller/: package-lock.json  package.json
javascript/react/dice-roller/src/: App.js
lua/: foo.lua
python/: main.py  test_main.py
rust/: Cargo.toml
rust/src/: dice.rs  main.rs  test.rs
tcl/: main.tcl  test_main.tcl  tk_main.tcl
tcl/src/: dice.tcl
tcl/test/: dice.test
